# prose-lang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  extension.yml  pyproject.toml
.agent/skills/prose-lang/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
commands/: prose.build.md  prose.document.md  prose.generate.md  prose.publish.md  prose.reverse-engineer.md  prose.test.md
examples/: README.md
examples/algorithms/: README.md
examples/algorithms/prime/PRIMES_is_in_P/: README.md
examples/algorithms/prime/PRIMES_is_in_P/src/: PRIMES_is_in_P.prose
examples/algorithms/rand/: README.md
examples/algorithms/rand/src/: knuth_random_shuffle.prose
examples/algorithms/rand/tests/: benchmark_shuffle.sh  test_shuffle.sh
examples/algorithms/sort/src/: advanced_sorts.prose  basic_sorts.prose  distribution_sorts.prose  esoteric_sorts.prose
examples/calc/: README.md
examples/calc/src/: calc.prose
examples/full-stack/: README.md
examples/full-stack/src/: full-stack.prose
examples/hello-world-cli/: README.md  go.mod  hello.prose  namaste.prose
examples/hello-world-micro-service/: README.md
examples/hello-world-micro-service/src/: hello.prose
examples/micro-service/: README.md
examples/micro-service/src/: m1.prose  m2.prose  ui.prose
installer/: README.md  __init__.py  cli.py
spec/: README.md  specification.md
spec/scripts/: check_sync.py
spec/skills-template/prose-lang/: SKILL.md
tests/: test_check_sync.py  test_installer.py
(+4 files in other folders)
